--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps: 
-      - uses: actions/checkout@v3with:
+      - uses: actions/checkout@v2
+        with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/setup-python@v2with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/setup-python@v2
         with:
           python-version: 3.x
       - run: pip install -r requirements.txt
